Added a non-benchmark mode

--- a/c_code/CMakeLists.txt
+++ b/c_code/CMakeLists.txt
@@ -4,7 +4,9 @@ SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -fPIC -pedantic -O3 -fopenmp -mtune=native
 
 INCLUDE_DIRECTORIES("./include" "./dbscan")
 #INCLUDE_DIRECTORIES(./lib)
-FILE(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
+FILE(GLOB COMMON_SOURCE_FILES "source/*.cpp")
+FILE(GLOB WALKSCAN_SOURCE_FILES "source/walkscan/*.cpp")
+FILE(GLOB BENCHMARKS_SOURCE_FILES "source/benchmarks/*.cpp")
 
 find_package(Boost REQUIRED COMPONENTS program_options) # python)
 
@@ -17,7 +19,8 @@ if (Boost_FOUND)
     link_directories(${Boost_LIBRARY_DIRS})
 endif (Boost_FOUND)
 
-add_executable(walkscan ${SOURCE_FILES} "./dbscan/dbscan.cpp")
+add_executable(walkscan ${WALKSCAN_SOURCE_FILES} ${COMMON_SOURCE_FILES} "./dbscan/dbscan.cpp")
+add_executable(benchmarks ${BENCHMARKS_SOURCE_FILES} ${COMMON_SOURCE_FILES} "./dbscan/dbscan.cpp")
 
 #FILE(GLOB_RECURSE DBSCAN ./lib/*.a)
 #TARGET_LINK_LIBRARIES(walkscan ${DBSCAN})
